fix column width to avoid horizontal scroll bar

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -130,6 +130,10 @@ footer.footer
 .footer .menu-list a
   color: #ffffff;
 
+footer .columns
+  margin-left: -.01rem;
+  margin-right: -.01rem;
+
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $lightgreen !important
